--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
+
 <div>
-    <app-items></app-items>
+    <div class="three-col-grid">
+
+        <div class="grid-item">
+            <app-items></app-items>
+        </div>
+        
+        <div class="grid-item-right">
+            Контент выбранного меню
+        </div>
+    </div>
 </div>
