--- a/src/app/components/items/items.component.html
+++ b/src/app/components/items/items.component.html
@@ -1,3 +1,4 @@
+<div class="div-menu">
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
   <!-- This is the tree node template for leaf nodes -->
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
@@ -25,3 +26,4 @@
     </li>
   </mat-nested-tree-node>
 </mat-tree>
+</div>
