--- a/FrontEnd/ClientAngular/src/app/app.component.html
+++ b/FrontEnd/ClientAngular/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="three-col-grid">
 
         <div class="grid-item">
-            <app-items></app-items>
+            <app-items [Array1]="_items"></app-items>
         </div>
         
         <div class="grid-item-right">
