--- a/FrontEnd/ClientAngular/src/app/components/items/items.component.html
+++ b/FrontEnd/ClientAngular/src/app/components/items/items.component.html
@@ -1,4 +1,4 @@
-<div class="div-menu">
+<div >
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
   <!-- This is the tree node template for leaf nodes -->
   
