last comment in master

--- a/FrontEnd/ClientAngular/src/app/app.component.html
+++ b/FrontEnd/ClientAngular/src/app/app.component.html
@@ -7,7 +7,7 @@
         </div>
         
         <div class="grid-item-right">
-            Контент выбранного меню
+            Контент выбранного меню2
         </div>
     </div>
 </div>
