--- a/ClientAngular/src/app/app.component.html
+++ b/ClientAngular/src/app/app.component.html
@@ -1,25 +1,11 @@
-
 <div>
     <div class="three-col-grid">
-
         <div class="grid-item">
-            <app-items></app-items>
+            <app-items (selectParentId)="GetCorrectItems($event)"></app-items>
         </div>
-        
+
         <div class="grid-item-right">
-
-            <div class="alert alert-warning alert-dismissible fade show  post-size" role="alert">
-            <div>
-                <p>название</p>
-                <p>ссылка</p>
-                <img src="https://st2.depositphotos.com/2001755/5408/i/450/depositphotos_54081723-stock-photo-beautiful-nature-landscape.jpg" height="80зx"/>
-            </div>
-
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-
-            </div>
+            <app-content [Posts]="CorrectItems"></app-content>
         </div>
     </div>
 </div>
