--- a/ClientAngular/src/app/components/items/items.component.html
+++ b/ClientAngular/src/app/components/items/items.component.html
@@ -5,7 +5,7 @@
     <li class="mat-tree-node"  (mouseleave)="node.isVisible=false" (mouseenter)="node.isVisible=true">
       <button mat-icon-button disabled ></button>
 
-      {{node.name}}
+        <button (click)="SelectItem(node)">{{node.name}}</button> 
 
       <div *ngIf=node.isVisible>
           <button class="btn btn-warning btn-circle"></button>
@@ -23,7 +23,12 @@
             {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}} 
           </mat-icon>
         </button>
-        {{node.name}}
+      <div>
+        
+      </div>
+
+        <h6>{{node.name}}</h6>
+
         <div *ngIf=node.isVisible>
           <button class="btn btn-warning btn-circle"></button>
           <button class="btn btn-danger btn-circle"></button>
