--- a/ClientAngular/src/app/components/content/content.component.html
+++ b/ClientAngular/src/app/components/content/content.component.html
@@ -1,4 +1,8 @@
-<div class="div-content-right" fx
-     *ngFor="let post of Posts" >
-  <p>{{post.name}}</p>
+<div class="div-container-row">
+  <div class="div-content-right"
+       *ngFor="let post of Posts" >
+    <p>{{post.name}}</p>
+    <p>image:{{post.image}}</p>
+    <p>link:{{post.link}}</p>
+  </div>
 </div>
