--- a/ClientAngular/src/app/components/content/content.component.html
+++ b/ClientAngular/src/app/components/content/content.component.html
@@ -2,7 +2,7 @@
   <div class="div-content-right"
        *ngFor="let post of Posts" >
     <p>{{post.name}}</p>
-    <p>image:{{post.image}}</p>
+    <img height="100px" width="100px" [src]="post.image"  alt=""/>
     <p>link:{{post.link}}</p>
   </div>
 </div>
