--- a/ClientAngular/src/app/components/content/content.component.css
+++ b/ClientAngular/src/app/components/content/content.component.css
@@ -1,15 +1,12 @@
-.div-content-right {
-  width: 200px;
-  height: 200px;
-  border-radius: 10px;
-  border: 2px solid #c333;
-  margin: 10px;
-}
 
 .div-container-row {
-  justify-content: normal;
   display: flex;
   flex-wrap: wrap;
+}
+
+.div-button {
+  position: absolute;
+  bottom: 0;
 }
 
 li {
@@ -20,4 +17,54 @@ p {
   text-align: center;
   margin-top: 2px;
   text-wrap: normal;
+}
+
+.animation-up-post {
+  animation-name: PostUp;
+  animation-duration: 3s;
+  animation-iteration-count: 1;
+  width: 400px;
+  height: 400px;
+}
+.animation-down-post {
+  animation-name: PostDown;
+  animation-duration: 3s;
+  animation-iteration-count: 1;
+}
+@keyframes PostUp {
+  0% {
+    width: 200px;
+    height: 200px;
+  }
+  100% {
+    width: 400px;
+    height: 400px;
+  }
+}
+@keyframes PostDown {
+  0% {
+    width: 400px;
+    height: 400px;
+  }
+  100% {
+    width: 200px;
+    height: 200px;
+  }
+}
+input{
+  width: 300px;
+}
+.btn-add{
+  background: green;
+}
+.btn-remove{
+  background: brown;
+}
+.div-updateSize{
+  margin-right: 15px;
+  margin-top: 5px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 20px;
 }
