--- a/ClientAngular/src/app/components/items/items.component.css
+++ b/ClientAngular/src/app/components/items/items.component.css
@@ -3,18 +3,15 @@
 mat-tree{
     background: brown;
     height: 100vh;
+    border-right: 10px solid black;
+    width: 300px;
 }
 ul {
     padding-inline-start: 10px;
 }
-
-.btn-circle {
-    width: 20px;
-    height: 20px;
-    border-radius: 8px;
-    text-align: center;
-    padding-left: 0;
-    padding-right: 0;
-    font-size: 16px;
-    margin-left: 8px;
+.btn-add{
+  background: green;
+}
+.btn-remove{
+  background: brown;
 }
