--- a/ClientAngular/src/app/components/items/items.component.html
+++ b/ClientAngular/src/app/components/items/items.component.html
@@ -5,11 +5,11 @@
     <li class="mat-tree-node"  (mouseleave)="node.isVisible=false" (mouseenter)="node.isVisible=true">
       <button mat-icon-button disabled ></button>
 
-        <button (click)="SelectItem(node)">{{node.name}}</button> 
+        <button (click)="SelectItem(node)">{{node.name}}</button>
 
       <div *ngIf=node.isVisible>
-          <button class="btn btn-warning btn-circle"></button>
-          <button class="btn btn-danger btn-circle"></button>
+          <button (click)="OnAddTreeItem(node)" class="btn-circle btn-add"></button>
+          <button (click)="OnDeleteItem(node)" class="btn-circle btn-remove"></button>
       </div>
     </li>
   </mat-tree-node>
@@ -17,21 +17,20 @@
   <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
     <li>
       <div class="mat-tree-node" (mouseleave)="node.isVisible=false" (mouseenter)="node.isVisible=true">
-        <button mat-icon-button matTreeNodeToggle 
+        <button mat-icon-button matTreeNodeToggle
                 [attr.aria-label]="'toggle ' + node.name">
           <mat-icon class="mat-icon-rtl-mirror">
-            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}} 
+            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
           </mat-icon>
         </button>
       <div>
-        
-      </div>
 
+      </div>
         <h6>{{node.name}}</h6>
 
         <div *ngIf=node.isVisible>
-          <button class="btn btn-warning btn-circle"></button>
-          <button class="btn btn-danger btn-circle"></button>
+          <button (click)="OnAddTreeItem(node)" class="btn-circle btn-add"></button>
+          <button (click)="OnDeleteItem(node)" class="btn-circle btn-remove"></button>
         </div>
       </div>
       <ul [class.example-tree-invisible]="!treeControl.isExpanded(node)">
