--- a/ClientAngular/src/styles.css
+++ b/ClientAngular/src/styles.css
@@ -1,5 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 html, body { height: 100%; }
@@ -28,3 +27,35 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.btn-circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 15px;
+  text-align: center;
+  padding-left: 0;
+  padding-right: 0;
+  font-size: 16px;
+  margin-left: 8px;
+}
+.btn-update{
+  background: dodgerblue;
+}
+.btn-up{
+  background: darkmagenta;
+}
+.btn-down{
+  background: aqua;
+}
+.div-content-right {
+  width: 200px;
+  height: 200px;
+  border-radius: 10px;
+  border: 2px solid #c333;
+  margin: 10px;
+  padding: 10px;
+  position: relative;
+  background-size: 500px;
+}
+
+
