--- a/ClientAngular/src/app/components/items/items.component.css
+++ b/ClientAngular/src/app/components/items/items.component.css
@@ -1,11 +1,15 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 mat-tree{
-    background: brown;
-    height: 100vh;
-    border-right: 10px solid black;
-    width: 300px;
+  height: 100vh;
+  border-right: 3px solid black;
+  width: 300px;
 }
+
+.mat-tree-disable{
+  width: 0;
+}
+
 ul {
     padding-inline-start: 10px;
 }
@@ -14,4 +18,12 @@ ul {
 }
 .btn-remove{
   background: brown;
+}
+.div-line {
+  border-top: 2px dashed darkmagenta;
+  height: 18px;
+}
+img.image-icons{
+  margin: 15px;
+  width: 15px;
 }
